# NUBot-Udisha

./: .dockerignore  .env  .gitignore  README.md  airflow-requirements.txt  airflow.cfg  docker-compose-airflow.yaml  docker-compose.yaml  dockerfile  faiss_index.dvc  metadata.pkl  metadata.pkl.dvc  pyproject.toml  requirements.txt  scraped_data.dvc  setup.py  vector_index.faiss  vector_index.faiss.dvc  workflows.py
.dvc/: .gitignore  config
.github/workflows/: backend-docker-image-build.yml  codeql.yml  frontend-docker-image-build.yml  gcp_cloud_connection.yml  mlflow-docker-image-build.yml  test.yml
airflow/dags/: .env  process_airflow.py
airflow/dags/dataflow/: chunk_data.py  rag_model.py
dags/: webairflow.py
dags/src/data_preprocessing/: exception.py  logger.py  scraper.py
mlruns/0/: meta.yaml
mlruns/0/04b72eddc19c49c39b629533a372fa77/: meta.yaml
mlruns/0/04b72eddc19c49c39b629533a372fa77/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/traces/04f4a80aa842427d9fcdcf694403587f/: trace_info.yaml
mlruns/0/traces/04f4a80aa842427d9fcdcf694403587f/request_metadata/: mlflow.traceInputs  mlflow.traceOutputs
prefectWorkflows/: .env  prefect.yaml  scraper_flow.py
prefectWorkflows/dataflow/: chunk_data.py  scraper.py  store_data.py
services/backend/: .dockerignore  .env  .gitignore  Dockerfile  backend.env  docker-compose.yaml  faiss_index.dvc  main.py  pyproject.toml  requirements.txt  runscripts.sh  runtime-requirements.txt  setup.py  wsgi.py
services/backend/src/dataflow/: chunk_data.py  rag_model.py  scraper.py  store_data.py
services/backend/src/dataflow/faiss_index/: index.pkl
services/backend/src/dataflow/utils/: exception.py
services/backend/src/prefectWorkflows/: scraper_flow.py
services/backend/src/utils/: exception.py  logger.py
services/frontend/: .env  Dockerfile  app.py  docker-compose.yaml  requirements.txt
src/backend/: api.py  exception.py  logger.py
src/data_preprocessing/: chunk_data.py  exception.py  preprocess_data.py  querymodel.py  rag.py  scraper.py
src/frontend/: app.py
src/model/: exception.py  logger.py  rag_model.py
src/prefectWorkflows/: scraper_flow.py
tests/: test_preprocess_data.py  test_scraper_flow.py
(+2 files in other folders)
